# ccny_rgbd_tools

./: .gitignore  .gitmodules  CHANGELIST.md  README  README.md  stack.xml
ccny_gicp/: CMakeLists.txt  manifest.xml
ccny_gicp/include/ccny_gicp/: gicp.h  gicp_align.h  octree_pointcloud_storage.h  octree_pointcloud_storage.hpp  optimize.h  scan.h  transform.h  types.h
ccny_gicp/src/: bfgs_funcs.cpp  gicp.cpp  gicp_align.cpp  octree_pointcloud_storage.cpp  optimize.cpp  scan.cpp  scan2ascii.cpp  test_gicp.cpp  transform.cpp
ccny_rgbd/: .directory  CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
ccny_rgbd/cfg/: .gitignore  FeatureDetector.cfg  GftDetector.cfg  OrbDetector.cfg  RGBDImageProc.cfg  StarDetector.cfg  SurfDetector.cfg
ccny_rgbd/data/calibration_openni_default/: depth.yml
ccny_rgbd/docs/: RGBDImageProcConfig-usage.dox  RGBDImageProcConfig.dox  RGBDImageProcConfig.wikidoc
ccny_rgbd/include/ccny_rgbd/: .directory  proc_util.h  rgbd_map_util.h  rgbd_normals.h  rgbd_util.h  test_projection.h  types.h  util.h
ccny_rgbd/include/ccny_rgbd/apps/: .directory  avg_logger.h  feature_viewer.h  keyframe_loop_mapper.h  keyframe_mapper .h  keyframe_mapper.h  keyframes_reshaper.h  logger.h  mono_vo.h  octree_mapper.h  rgbd_image_proc.h  visual_odometry.h
ccny_rgbd/include/ccny_rgbd/features/: canny_detector.h  fast_detector.h  feature_detector.h  gft_detector.h  klt_detector.h  orb_detector.h  sift_gpu_detector.h  star_detector.h  surf_detector.h
ccny_rgbd/include/ccny_rgbd/loop/: keyframe_generator.h  loop_detection.h  loop_solver.h  loop_solver_gicp.h  loop_solver_sba.h
ccny_rgbd/include/ccny_rgbd/mapping/: .directory  keyframe_aggregator.h  keyframe_generator.h  keyframe_graph_detector.h  keyframe_graph_solver.h  (+9 more)
ccny_rgbd/launch/: .directory  carlos.vcg  feature_viewer.launch  feature_viewer.vcg  keyframes_reshaper.launch  mono_vo+camera_from_bag.launch  mono_vo.launch  mono_vo_rviz.launch  play_bag.launch  rgbd_image_proc.launch  rgbdvo.launch  rgbdvo.launch~  rviz.vcg  rviz_mono_vo.vcg  visual_odometry.launch  vo+mapping.launch  vo+mapping.rviz  vo+mapping.vcg  vo+mapping_from_bag.launch  vo+mapping_live.launch  vo+mapping_record.launch  vo+mapping_replay.launch
ccny_rgbd/msg/: Keyframe.msg
ccny_rgbd/nodelets/: rgbd_image_proc_nodelet.xml
ccny_rgbd/src/: .directory  global_yaw_histogram_align.cpp  greedy_projection.cpp  keyframe_yaw_histogram_align.cpp  mls.cpp  proc_util.cpp  rgbd_map_util.cpp  rgbd_normals.cpp  rgbd_util.cpp  test_keyframe_associations.cpp  test_projection.cpp  util.cpp
ccny_rgbd/src/apps/: .directory  avg_logger.cpp  cvKnn.cpp  feature_viewer.cpp  greedy_projection.cpp  keyframe_loop_mapper.cpp  keyframe_mapper.cpp  keyframes_reshaper.cpp  logger.cpp  mono_vo.cpp  octree_mapper.cpp  rgbd_image_proc.cpp  visual_odometry.cpp
ccny_rgbd/src/features/: canny_detector.cpp  fast_detector.cpp  feature_detector.cpp  gft_detector.cpp  klt_detector.cpp  orb_detector.cpp  sift_gpu_detector.cpp  star_detector.cpp  surf_detector.cpp
ccny_rgbd/src/loop/: keyframe_generator.cpp  loop_detection.cpp  loop_solver.cpp  loop_solver_gicp.cpp  loop_solver_sba.cpp
ccny_rgbd/src/mapping/: .directory  keyframe_aggregator.cpp  keyframe_generator.cpp  keyframe_graph_detector.cpp  keyframe_graph_solver.cpp  keyframe_graph_solver_g2o.cpp  keyframe_loop_detector.cpp  keyframe_loop_solver.cpp  keyframe_loop_solver_g2o.cpp  keyframe_loop_solver_sba.cpp  keyframe_loop_solver_toro.cpp  keyframe_mapper.cpp  octree_pointcloud_storage.cpp
ccny_rgbd/src/node/: avg_logger_node.cpp  feature_viewer_node.cpp  keyframe_loop_mapper_node.cpp  keyframe_mapper_node.cpp  keyframes_reshaper_node.cpp  logger_node.cpp  mono_vo_node.cpp  octree_mapper_node.cpp  rgbd_image_proc_node.cpp  rgbd_vo_node.cpp  visual_odometry_node.cpp
ccny_rgbd/src/nodelet/: rgbd_image_proc_nodelet.cpp
ccny_rgbd/src/registration/: .directory  icp_kd.cpp  iterative_closest_point.cpp  motion_estimation.cpp  motion_estimation_icp.cpp  motion_estimation_icp_loop.cpp  motion_estimation_icp_model.cpp  motion_estimation_icp_particles.cpp  motion_estimation_icp_prob_model.cpp  motion_estimation_klt_prob_model.cpp  motion_estimation_ransac.cpp  motion_estimation_ransac_model.cpp  motion_prediction_imu.cpp  rgbd_vo.cpp
ccny_rgbd/src/structures/: feature_history.cpp  kmatch.cpp  monocular_frame.cpp  rgbd_frame.cpp  rgbd_keyframe.cpp
ccny_rgbd/srv/: .directory  AddManualAssociation.srv  AlignPair.srv  PairwiseRANSAC.srv  PublishAllKeyframes.srv  PublishKeyframe.srv  PublishKeyframes.srv
ccny_rgbd_calibrate/: .directory  CALIBRATION INSTRUCTIONS  CMakeLists.txt  mainpage.dox  manifest.xml
ccny_rgbd_calibrate/include/ccny_rgbd_calibrate/: .directory  avg_logger.h  calib_util.h  depth_calibrator.h  extrinsics_calibrator.h  logger.h  rgb_ir_calibrator.h  uncertainty_comparator.h
ccny_rgbd_calibrate/launch/: depth_calibrate.launch~  depth_calibration.launch  extrinsics_calibration.launch  warp_calibration.launch
ccny_rgbd_calibrate/plot/: .directory  fit.py
ccny_rgbd_calibrate/src/: .directory  avg_logger.cpp  avg_logger_node.cpp  calib_util.cpp  depth_calibrator.cpp  depth_calibrator_node.cpp  extrinsics_calibrator.cpp  extrinsics_calibrator_node.cpp  logger.cpp  logger_node.cpp  rgb_ir_calibrator.cpp  rgb_ir_calibrator_node.cpp  uncertainty_comparator.cpp  uncertainty_comparator_node.cpp
libccny_rgbd/: CMakeLists.txt
libccny_rgbd/include/ccny_rgbd/: header.h  rgbd_frame.h  rgbd_keyframe.h  rgbd_util.h  types.h
libccny_rgbd/src/: rgbd_frame.cpp  rgbd_keyframe.cpp  rgbd_util.cpp
libccny_rgbd/src/features/: surf_detector.cpp
libccny_rgbd/src/registration/: motion_estimation.cpp  motion_estimation_icp_prob_model.cpp
rgbd_image_proc/: CMakeLists.txt  mainpage.dox  manifest.xml  rgbd_image_proc_nodelet.xml
rgbd_image_proc/cfg/: RGBDImageProc.cfg
rgbd_image_proc/include/rgbd_image_proc/: rgbd_image_proc.h  rgbd_image_proc_nodelet.h
rgbd_image_proc/launch/: rgbd_image_proc.launch
rgbd_image_proc/src/: rgbd_image_proc.cpp  rgbd_image_proc_node.cpp  rgbd_image_proc_nodelet.cpp
(+171 files in other folders)
